handling step navigations

--- a/Set_up_conversational_interface_5.ipynb
+++ b/Set_up_conversational_interface_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -33,18 +33,115 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: ipynb in c:\\users\\18723\\anaconda3\\lib\\site-packages (0.5.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: requests in c:\\users\\18723\\anaconda3\\lib\\site-packages (2.29.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\18723\\anaconda3\\lib\\site-packages (from requests) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\18723\\anaconda3\\lib\\site-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\18723\\anaconda3\\lib\\site-packages (from requests) (1.26.16)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\18723\\anaconda3\\lib\\site-packages (from requests) (2024.8.30)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\18723\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\python.exe: No module named spacy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moussaka \n",
+      "\n",
+      "3 eggplants, peeled and cut lengthwise into 1/2 inch thick slices\n",
+      "salt to taste\n",
+      "1/4 cup olive oil\n",
+      "1 tablespoon butter\n",
+      "1 pound lean ground beef\n",
+      "2 onions, chopped\n",
+      "1 clove garlic, minced\n",
+      "ground black pepper to taste\n",
+      "2 tablespoons dried parsley\n",
+      "1/2 teaspoon fines herbs\n",
+      "1/4 teaspoon ground cinnamon\n",
+      "1/2 teaspoon ground nutmeg, divided\n",
+      "1 (8 ounce) can tomato sauce\n",
+      "1/2 cup red wine\n",
+      "1 egg, beaten\n",
+      "4 cups milk\n",
+      "1/2 cup butter\n",
+      "6 tablespoons all-purpose flour\n",
+      "ground white pepper, to taste\n",
+      "3/2 cups freshly grated Parmesan cheese\n",
+      "\n",
+      "Lay eggplant slices on paper towels. ['lay'] ['eggplants, peeled and cut lengthwise into 1/2 inch thick slices'] []\n",
+      "Sprinkle lightly with salt. ['sprinkle'] ['salt to taste'] []\n",
+      "Let sit for 30 minutes to draw out moisture. ['sit'] [] ['30 minutes']\n",
+      "Pat dry with paper towels. ['dry'] [] []\n",
+      "Warm olive oil in a skillet over high heat. ['warm'] ['olive oil'] []\n",
+      "Fry eggplant until browned, 2 to 3 minutes per side. ['fry'] [] ['2 to 3 minutes']\n",
+      "Drain on paper towels. ['drain'] [] []\n",
+      "Set aside. ['set'] [] []\n",
+      "Melt 1 tablespoon butter in a large skillet over medium heat. ['melt'] [] []\n",
+      "Stir in ground beef, onions, and garlic. ['stir'] ['lean ground beef', 'onions, chopped', 'garlic, minced'] []\n",
+      "Season with salt and black pepper. ['season'] ['ground black pepper to taste'] []\n",
+      "Cook and stir until beef is browned, 8 to 10 minutes. ['cook', 'stir'] [] ['8 to 10 minutes']\n",
+      "Add parsley, fines herbs, cinnamon, and 1/4 teaspoon nutmeg. ['add'] ['dried parsley', 'fines herbs', 'ground cinnamon'] []\n",
+      "Pour in tomato sauce and wine. ['pour'] ['tomato sauce', 'red wine'] []\n",
+      "Mix well. ['mix'] [] []\n",
+      "Simmer for 20 minutes. ['simmer'] [] ['20 minutes']\n",
+      "Allow to cool. ['allow'] [] []\n",
+      "Stir in beaten egg. ['stir'] ['egg, beaten'] []\n",
+      "Scald milk in a saucepan over medium heat. ['scald'] [] []\n",
+      "At the same time, melt 1/2 cup butter in a large skillet over medium heat. ['melt'] [] []\n",
+      "Whisk flour into butter until smooth. ['whisk'] ['butter'] []\n",
+      "Lower heat. ['lower'] [] []\n",
+      "Gradually pour in scalded milk, whisking constantly until it thickens. ['pour'] ['milk'] []\n",
+      "Season béchamel sauce with salt and white pepper. ['season'] ['ground white pepper, to taste'] ['season']\n",
+      "Preheat the oven to 350 degrees F (175 degrees C). ['preheat'] [] []\n",
+      "Grease a 9x13-inch baking dish. ['grease'] [] []\n",
+      "Arrange a single layer of eggplant in the prepared baking dish. ['arrange'] [] []\n",
+      "Cover eggplant with meat sauce. ['cover'] [] []\n",
+      "Sprinkle 1/2 cup Parmesan cheese on top. ['sprinkle'] ['freshly grated Parmesan cheese'] []\n",
+      "Cover with remaining eggplant and sprinkle another 1/2 cup cheese on top. ['cover', 'sprinkle'] [] []\n",
+      "Pour béchamel sauce on top and sprinkle with remaining 1/4 teaspoon nutmeg. ['pour', 'sprinkle'] [] []\n",
+      "Cover with remaining cheese. ['cover'] [] []\n",
+      "Bake in the preheated oven until bubbly and browned, about 1 hour. ['bake', 'browned'] [] ['about 1 hour']\n",
+      "Serve hot and enjoy!. ['serve'] [] []\n",
+      "add VERB ROOT add VERB [parsley, herbs] \n",
+      "parsley NOUN dobj add VERB [,] \n",
+      ", PUNCT punct parsley NOUN [] \n",
+      "fines NOUN compound herbs NOUN [] \n",
+      "herbs NOUN dobj add VERB [fines, ,, cinnamon] \n",
+      ", PUNCT punct herbs NOUN [] \n",
+      "cinnamon NOUN conj herbs NOUN [,, and, nutmeg] \n",
+      ", PUNCT punct cinnamon NOUN [] \n",
+      "and CCONJ cc cinnamon NOUN [] \n",
+      "1/4 NUM nummod nutmeg NOUN [] CARDINAL\n",
+      "teaspoon NOUN compound nutmeg NOUN [] \n",
+      "nutmeg NOUN conj cinnamon NOUN [1/4, teaspoon] \n",
+      "\n",
+      "parsley parsley dobj add\n",
+      "fines herbs herbs dobj add\n",
+      "cinnamon cinnamon conj herbs\n",
+      "1/4 teaspoon nutmeg nutmeg conj cinnamon\n",
+      "\n",
+      "1/4 CARDINAL\n"
      ]
     }
    ],
    "source": [
     "%pip install ipynb\n",
+    "\n",
+    "%run parser.ipynb\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -92,40 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The ingredients for 'Moussaka' are as follows:\n",
-      "  • 3 eggplants, peeled and cut lengthwise into 1/2 inch thick slices\n",
-      "  • salt to taste\n",
-      "  • 1/4 cup olive oil\n",
-      "  • 1 tablespoon butter\n",
-      "  • 1 pound lean ground beef\n",
-      "  • 2 onions, chopped\n",
-      "  • 1 clove garlic, minced\n",
-      "  • ground black pepper to taste\n",
-      "  • 2 tablespoons dried parsley\n",
-      "  • 1/2 teaspoon fines herbs\n",
-      "  • 1/4 teaspoon ground cinnamon\n",
-      "  • 1/2 teaspoon ground nutmeg, divided\n",
-      "  • 1 (8 ounce) can tomato sauce\n",
-      "  • 1/2 cup red wine\n",
-      "  • 1 egg, beaten\n",
-      "  • 4 cups milk\n",
-      "  • 1/2 cup butter\n",
-      "  • 6 tablespoons all-purpose flour\n",
-      "  • ground white pepper, to taste\n",
-      "  • 3/2 cups freshly grated Parmesan cheese\n",
-      "\n",
-      "Would you like to walk through the steps, or do you have any other questions?\n",
-      "You can press '1' for the next step, '2' for the list of ingredients or 'quit' to end the session or any other questions you have\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def display_ingredients(recipe, context):\n",
     "    \n",
@@ -171,14 +237,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def handle_input(recipe, context):\n",
-    "    pass\n",
+    "import spacy\n",
+    "import re\n",
+    "\n",
+    "number_map = {\n",
+    "    \"zero\": 0, \"one\": 1, \"first\": 1, \"two\": 2, \"second\": 2, \"three\": 3, \"third\": 3,\n",
+    "    \"four\": 4, \"fourth\": 4, \"five\": 5, \"fifth\": 5, \"six\": 6, \"sixth\": 6,\n",
+    "    \"seven\": 7, \"seventh\": 7, \"eight\": 8, \"eighth\": 8, \"nine\": 9, \"ninth\": 9,\n",
+    "    \"ten\": 10, \"tenth\": 10, \"eleven\": 11, \"eleventh\": 11, \"twelve\": 12, \"twelfth\": 12,\n",
+    "    \"thirteen\": 13, \"thirteenth\": 13, \"fourteen\": 14, \"fourteenth\": 14,\n",
+    "    \"fifteen\": 15, \"fifteenth\": 15, \"sixteen\": 16, \"sixteenth\": 16,\n",
+    "    \"seventeen\": 17, \"seventeenth\": 17, \"eighteen\": 18, \"eighteenth\": 18,\n",
+    "    \"nineteen\": 19, \"nineteenth\": 19, \"twenty\": 20, \"twentieth\": 20,\n",
+    "    \"thirty\": 30, \"thirtieth\": 30, \"forty\": 40, \"fortieth\": 40,\n",
+    "    \"fifty\": 50, \"fiftieth\": 50, \"sixty\": 60, \"sixtieth\": 60,\n",
+    "    \"seventy\": 70, \"seventieth\": 70, \"eighty\": 80, \"eightieth\": 80,\n",
+    "    \"ninety\": 90, \"ninetieth\": 90, \"hundred\": 100\n",
+    "}\n",
+    "\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "def extract_step_number(user_input):\n",
+    "    \n",
+    "    ordinal_match = re.search(r\"(\\d+)(?:st|nd|rd|th)?\", user_input)\n",
+    "    if ordinal_match:\n",
+    "        return int(ordinal_match.group(1))\n",
+    "    \n",
+    "    \n",
+    "    user_input = user_input.lower().strip()\n",
+    "    words = re.findall(r'\\w+', user_input)  # Split input into words\n",
+    "\n",
+    "    total = 0\n",
+    "    current_value = 0\n",
+    "\n",
+    "    for word in words:\n",
+    "        if word in number_map:\n",
+    "            value = number_map[word]\n",
+    "            # Handle cases like \"twenty-first\", \"forty-second\"\n",
+    "            if value >= 100:\n",
+    "                current_value *= value\n",
+    "            elif current_value >= 20:\n",
+    "                total += current_value\n",
+    "                current_value = value\n",
+    "            else:\n",
+    "                current_value += value\n",
+    "\n",
+    "    total += current_value\n",
+    "    return total if total > 0 else None\n",
+    "\n",
+    "\n",
+    "# Example Usage\n",
+    "# print(extract_step_number(\"second\"))\n",
+    "# print(extract_step_number(\"tenth\"))\n",
+    "# print(extract_step_number(\"twenty-first\")) \n",
+    "# print(extract_step_number(\"forty-second\")) \n",
+    "# print(extract_step_number(\"fiftieth\"))      \n",
+    "# print(extract_step_number(\"thirty-five\"))    \n",
+    "# print(extract_step_number(\"seventy-eighth\"))\n",
+    "# print(extract_step_number(\"go to the second step\"))\n",
+    "# print(extract_step_number(\"take me the fifth step\")) \n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 2: Sprinkle lightly with salt.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "Step 1: Lay eggplant slices on paper towels.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "Step 7: Drain on paper towels.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "Step 8: Set aside.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "Step 5: Warm olive oil in a skillet over high heat.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "Step 2: Sprinkle lightly with salt.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "import re\n",
+    "\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "\n",
+    "def extract_step_number(user_input):\n",
+    "    \n",
+    "    ordinal_match = re.search(r\"(\\d+)(?:st|nd|rd|th)?\", user_input)\n",
+    "    if ordinal_match:\n",
+    "        return int(ordinal_match.group(1))\n",
+    "    \n",
+    "    \n",
+    "    user_input = user_input.lower().strip()\n",
+    "    words = re.findall(r'\\w+', user_input)  # Split input into words\n",
+    "\n",
+    "    total = 0\n",
+    "    current_value = 0\n",
+    "\n",
+    "    for word in words:\n",
+    "        if word in number_map:\n",
+    "            value = number_map[word]\n",
+    "            # Handle cases like \"twenty-first\", \"forty-second\"\n",
+    "            if value >= 100:\n",
+    "                current_value *= value\n",
+    "            elif current_value >= 20:\n",
+    "                total += current_value\n",
+    "                current_value = value\n",
+    "            else:\n",
+    "                current_value += value\n",
+    "\n",
+    "    total += current_value\n",
+    "    return total if total > 0 else None\n",
+    "\n",
+    "def repeat_step(recipe, context):\n",
+    "    context.current_step -= 1\n",
+    "    display_step(recipe, context)\n",
+    "    \n",
+    "def go_to_step(recipe, context, step):\n",
+    "    context.current_step =  step - 1\n",
+    "    display_step(recipe, context)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "def handle_input(recipe, context, user_input):\n",
+    "    \n",
+    "    doc = nlp(user_input.lower())\n",
+    "\n",
+    "    # Extract the main action verb\n",
+    "    action = None\n",
+    "    for token in doc:\n",
+    "        if token.pos_ == \"VERB\":\n",
+    "            action = token.lemma_\n",
+    "            break\n",
+    "\n",
+    "    # Determine the intent based on the verb\n",
+    "    if action == \"repeat\":\n",
+    "        repeat_step(recipe, context)\n",
+    "        return\n",
+    "\n",
+    "    if action in [\"go\", \"take\"]:\n",
+    "        # Check for \"go back\", \"previous\", or \"back\"\n",
+    "        if any(word in user_input for word in [\"back\", \"previous\"]):\n",
+    "            step_number = None\n",
+    "            \n",
+    "            step_check_pattern = pattern = r\"\\bstep\\b\"\n",
+    "            if re.search(step_check_pattern, user_input, re.IGNORECASE) is not None:\n",
+    "                input_number = extract_step_number(user_input)\n",
+    "                if not input_number:\n",
+    "                    step_number = context.current_step - 1\n",
+    "                else:\n",
+    "                    step_number = input_number\n",
+    "            else:\n",
+    "                input_number = extract_step_number(user_input) or 1\n",
+    "                step_number = context.current_step - input_number\n",
+    "            go_to_step(recipe, context, step_number)\n",
+    "            return\n",
+    "\n",
+    "        # Check for \"next step\" or \"forward\"\n",
+    "        if \"next\" in user_input or \"forward\" in user_input:\n",
+    "            input_number = extract_step_number(user_input) or 1\n",
+    "            step_number = context.current_step + input_number\n",
+    "            go_to_step(recipe, context, step_number)\n",
+    "            return\n",
+    "\n",
+    "        # Check for specific step (e.g., \"go to the 5th step\")\n",
+    "        step_number = extract_step_number(user_input)\n",
+    "        if step_number:\n",
+    "            if 1 <= step_number <= len(recipe.steps):\n",
+    "                go_to_step(recipe, context, step_number)\n",
+    "            else:\n",
+    "                print(\"Invalid step number.\")\n",
+    "            return\n",
+    "    \n",
     "    #to do later\n",
-    "    return"
+    "    return\n",
+    "context = Context()\n",
+    "context.current_step  = 2\n",
+    "recipe =  get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
+    "# handle_input(recipe, context, \"repeat the previous step again!\")\n",
+    "# handle_input(recipe, context, \"go back to the previous step!\")\n",
+    "# handle_input(recipe, context, \"go to step 7\")\n",
+    "# handle_input(recipe, context, \"go to the next step\")\n",
+    "# handle_input(recipe, context, \"take me back tot he fifth step\")  \n",
+    "# handle_input(recipe, context, \"go back to the second step\")\n"
    ]
   },
   {
@@ -386,7 +649,7 @@
     "          \n",
     "          \n",
     "    else:\n",
-    "      handle_input(recipe, context)\n",
+    "      handle_input(recipe, context,user_prompt)\n",
     "        \n",
     "  \n",
     "  \n",
