Handling how for both vague and specific kind fo questions

--- a/Set_up_conversational_interface_5.ipynb
+++ b/Set_up_conversational_interface_5.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -156,15 +156,15 @@
    ],
    "source": [
     "# from parser import get_recipe_from_url\n",
-    "def display_step(recipe, context):\n",
+    "def display_step(context):\n",
     "    \n",
-    "    if context.current_step >= len(recipe.steps):\n",
+    "    if context.current_step >= len(context.current_recipe.steps):\n",
     "        print(\"Sorry, we have gonee through all the steps\")\n",
     "        \n",
-    "    if context.current_step == len(recipe.steps) - 1:\n",
+    "    if context.current_step == len(context.current_recipe.steps) - 1:\n",
     "        step_text = f\"Final Step: {recipe.steps[context.current_step]}\"\n",
     "    else:\n",
-    "        step_text = f\"Step {context.current_step + 1}: {recipe.steps[context.current_step].text}\"\n",
+    "        step_text = f\"Step {context.current_step + 1}: {context.current_recipe.steps[context.current_step].text}\"\n",
     "\n",
     "    \n",
     "    print(step_text)\n",
@@ -172,7 +172,7 @@
     "    context.current_step += 1\n",
     "\n",
     "    \n",
-    "    if context.current_step >= len(recipe.steps):\n",
+    "    if context.current_step >= len(context.current_recipe.steps):\n",
     "        print(\"/n Do you have any questions regarding this final step?\")\n",
     "        print(\"You can press '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\")\n",
     "    else:\n",
@@ -183,20 +183,52 @@
     "\n",
     "context = Context()\n",
     "recipe =  get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
-    "display_step(recipe, context)     \n",
+    "context.current_recipe = recipe\n",
+    "display_step(context)     \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ingredients for 'Moussaka' are as follows:\n",
+      "  • 3 eggplants, peeled and cut lengthwise into 1/2 inch thick slices\n",
+      "  • salt to taste\n",
+      "  • 1/4 cup olive oil\n",
+      "  • 1 tablespoon butter\n",
+      "  • 1 pound lean ground beef\n",
+      "  • 2 onions, chopped\n",
+      "  • 1 clove garlic, minced\n",
+      "  • ground black pepper to taste\n",
+      "  • 2 tablespoons dried parsley\n",
+      "  • 1/2 teaspoon fines herbs\n",
+      "  • 1/4 teaspoon ground cinnamon\n",
+      "  • 1/2 teaspoon ground nutmeg, divided\n",
+      "  • 1 (8 ounce) can tomato sauce\n",
+      "  • 1/2 cup red wine\n",
+      "  • 1 egg, beaten\n",
+      "  • 4 cups milk\n",
+      "  • 1/2 cup butter\n",
+      "  • 6 tablespoons all-purpose flour\n",
+      "  • ground white pepper, to taste\n",
+      "  • 3/2 cups freshly grated Parmesan cheese\n",
+      "\n",
+      "Would you like to walk through the steps, or do you have any other questions?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients or 'quit' to end the session or any other questions you have\n"
+     ]
+    }
+   ],
    "source": [
-    "def display_ingredients(recipe, context):\n",
+    "def display_ingredients(context):\n",
     "    \n",
-    "    recipe_title = recipe.title\n",
-    "    ingredients = recipe.ingredients\n",
+    "    recipe_title = context.current_recipe.title\n",
+    "    ingredients = context.current_recipe.ingredients\n",
     "    \n",
     "    \n",
     "    \n",
@@ -230,14 +262,178 @@
     "        \n",
     "context = Context()\n",
     "recipe =  get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
-    "display_ingredients(recipe, context)            \n",
+    "context.current_recipe = recipe\n",
+    "display_ingredients(context)            \n",
     "    \n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YouTube Search URL: https://www.youtube.com/results?search_query=how+to+preheat+oven\n",
+      "Google Search URL: https://www.google.com/search?q=how+to+preheat+oven\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def generate_youtube_search_url(query):\n",
+    "    \n",
+    "    base_url = \"https://www.youtube.com/results?search_query=\"\n",
+    "    formatted_query = query.replace(\" \", \"+\")\n",
+    "    return base_url + formatted_query\n",
+    "\n",
+    "\n",
+    "query = \"how to preheat oven\"\n",
+    "search_url = generate_youtube_search_url(query)\n",
+    "print(f\"YouTube Search URL: {search_url}\")\n",
+    "\n",
+    "\n",
+    "def generate_google_search_url(query):\n",
+    "    \n",
+    "    base_url = \"https://www.google.com/search?q=\"\n",
+    "    formatted_query = query.replace(\" \", \"+\")\n",
+    "    return base_url + formatted_query\n",
+    "\n",
+    "\n",
+    "query = \"how to preheat oven\"\n",
+    "search_url = generate_google_search_url(query)\n",
+    "print(f\"Google Search URL: {search_url}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def is_ambiguous(input_string):\n",
+    "    \"\"\"\n",
+    "    Checks if the input string contains ambiguous references like 'that', 'these', 'this', etc.\n",
+    "\n",
+    "    \"\"\"\n",
+    "   \n",
+    "    pattern = r'\\b(that|this|these|those|it|here|there)\\b'\n",
+    "    \n",
+    "    return bool(re.search(pattern, input_string, re.IGNORECASE))\n",
+    "\n",
+    "def contains_what(input_string):\n",
+    "\n",
+    "    pattern = r'\\bwhat\\b'\n",
+    "    return bool(re.search(pattern, input_string, re.IGNORECASE))\n",
+    "\n",
+    "def contains_how(input_string):\n",
+    "    \n",
+    "    pattern = r'\\bhow\\b'\n",
+    "    return bool(re.search(pattern, input_string, re.IGNORECASE))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def handle_what(context, input_text):\n",
+    "    \n",
+    "    if is_ambiguous(input_text):\n",
+    "        \n",
+    "        current_step = context.current_recipe.steps[context.current_step - 1]\n",
+    "        queries = []\n",
+    "        result_strings = []\n",
+    "\n",
+    "       \n",
+    "        if isinstance(current_step.methods, list):\n",
+    "            for method in current_step.methods:\n",
+    "                if isinstance(method, str):\n",
+    "                    query = f\"{method} as a method of cooking\"\n",
+    "                    queries.append(query)\n",
+    "                    result_strings.append(\n",
+    "                        f\"For more details about '{method}', visit: {generate_google_search_url(query)}\"\n",
+    "                    )\n",
+    "\n",
+    "        \n",
+    "        for ingr in current_step.ingredients:\n",
+    "            if isinstance(ingr.name, str):\n",
+    "                query = ingr.name\n",
+    "                queries.append(query)\n",
+    "                result_strings.append(\n",
+    "                    f\"For more details about '{ingr.name}', visit: {generate_google_search_url(query)}\"\n",
+    "                )\n",
+    "\n",
+    "        \n",
+    "        if isinstance(current_step.tools, list):\n",
+    "            for tool in current_step.tools:\n",
+    "                if isinstance(tool, str):\n",
+    "                    queries.append(tool)\n",
+    "                    result_strings.append(\n",
+    "                        f\"For more details about '{tool}', visit: {generate_google_search_url(tool)}\"\n",
+    "                    )\n",
+    "\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        query = input_text + \" in the context of cooking\"\n",
+    "        result_strings = [\n",
+    "            f\"For more details, visit: {generate_google_search_url(query)}\"\n",
+    "        ]\n",
+    "    \n",
+    "    result_strings.append(\n",
+    "        \"You can press '1' for the next step, '2' for the list of ingredients, \"\n",
+    "        \"or 'quit' to end the session or any other questions you have.\"\n",
+    "    )\n",
+    "    \n",
+    "    return \"\\n\".join(result_strings)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def handle_how(context, input_text):\n",
+    "    \n",
+    "    if is_ambiguous(input_text):\n",
+    "        \n",
+    "        current_step = context.current_recipe.steps[context.current_step - 1]\n",
+    "        result_strings = []\n",
+    "\n",
+    "        \n",
+    "        if isinstance(current_step.methods, list):\n",
+    "            for method in current_step.methods:\n",
+    "                if isinstance(method, str):\n",
+    "                    query = f\"how do I {method} in the context of cooking\"\n",
+    "                    result_strings.append(\n",
+    "                        f\"For more details about how to '{method}', visit: {generate_youtube_search_url(query)}\"\n",
+    "                    )\n",
+    "    else:\n",
+    "        \n",
+    "        query = f\"{input_text} in the context of cooking\"\n",
+    "        result_strings = [\n",
+    "            f\"For more details, visit: {generate_youtube_search_url(query)}\"\n",
+    "        ]\n",
+    "    \n",
+    "    result_strings.append(\n",
+    "        \"You can press '1' for the next step, '2' for the list of ingredients, \"\n",
+    "        \"or 'quit' to end the session or any other questions you have.\"\n",
+    "    )\n",
+    "    return \"\\n\".join(result_strings)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -331,18 +527,14 @@
       "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
       "Step 2: Sprinkle lightly with salt.\n",
       "Do you have any questions regarding this step?\n",
-      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "For more details about 'sprinkle', visit: https://www.google.com/search?q=sprinkle+as+a+method+of+cooking\n",
+      "For more details about 'salt to taste', visit: https://www.google.com/search?q=salt+to+taste\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have.\n",
+      "For more details about how to 'sprinkle', visit: https://www.youtube.com/results?search_query=how+do+I+sprinkle+in+the+context+of+cooking\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have.\n",
+      "For more details, visit: https://www.youtube.com/results?search_query=how+do+I+deep-fry+fish+in+the+context+of+cooking\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have.\n"
      ]
     }
    ],
@@ -382,17 +574,27 @@
     "    total += current_value\n",
     "    return total if total > 0 else None\n",
     "\n",
-    "def repeat_step(recipe, context):\n",
+    "def repeat_step(context):\n",
     "    context.current_step -= 1\n",
-    "    display_step(recipe, context)\n",
+    "    display_step(context)\n",
     "    \n",
-    "def go_to_step(recipe, context, step):\n",
+    "def go_to_step(context, step):\n",
     "    context.current_step =  step - 1\n",
-    "    display_step(recipe, context)\n",
+    "    display_step(context)\n",
     "    \n",
     "\n",
     "\n",
-    "def handle_input(recipe, context, user_input):\n",
+    "def handle_input(context, user_input):\n",
+    "    \n",
+    "    if contains_what(user_input):\n",
+    "        result = handle_what(context, user_input)\n",
+    "        print(result)\n",
+    "        return\n",
+    "    \n",
+    "    if contains_how(user_input):\n",
+    "        result = handle_how(context, user_input)\n",
+    "        print(result)\n",
+    "        return \n",
     "    \n",
     "    doc = nlp(user_input.lower())\n",
     "\n",
@@ -405,7 +607,7 @@
     "\n",
     "    # Determine the intent based on the verb\n",
     "    if action == \"repeat\":\n",
-    "        repeat_step(recipe, context)\n",
+    "        repeat_step( context)\n",
     "        return\n",
     "\n",
     "    if action in [\"go\", \"take\"]:\n",
@@ -423,21 +625,21 @@
     "            else:\n",
     "                input_number = extract_step_number(user_input) or 1\n",
     "                step_number = context.current_step - input_number\n",
-    "            go_to_step(recipe, context, step_number)\n",
+    "            go_to_step(context, step_number)\n",
     "            return\n",
     "\n",
     "        # Check for \"next step\" or \"forward\"\n",
     "        if \"next\" in user_input or \"forward\" in user_input:\n",
     "            input_number = extract_step_number(user_input) or 1\n",
     "            step_number = context.current_step + input_number\n",
-    "            go_to_step(recipe, context, step_number)\n",
+    "            go_to_step(context, step_number)\n",
     "            return\n",
     "\n",
     "        # Check for specific step (e.g., \"go to the 5th step\")\n",
     "        step_number = extract_step_number(user_input)\n",
     "        if step_number:\n",
     "            if 1 <= step_number <= len(recipe.steps):\n",
-    "                go_to_step(recipe, context, step_number)\n",
+    "                go_to_step(context, step_number)\n",
     "            else:\n",
     "                print(\"Invalid step number.\")\n",
     "            return\n",
@@ -447,12 +649,16 @@
     "context = Context()\n",
     "context.current_step  = 2\n",
     "recipe =  get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
-    "# handle_input(recipe, context, \"repeat the previous step again!\")\n",
-    "# handle_input(recipe, context, \"go back to the previous step!\")\n",
-    "# handle_input(recipe, context, \"go to step 7\")\n",
-    "# handle_input(recipe, context, \"go to the next step\")\n",
-    "# handle_input(recipe, context, \"take me back tot he fifth step\")  \n",
-    "# handle_input(recipe, context, \"go back to the second step\")\n"
+    "context.current_recipe = recipe\n",
+    "handle_input(context, \"repeat the previous step again!\")\n",
+    "handle_input(context, \"go back to the previous step!\")\n",
+    "handle_input(context, \"go to step 7\")\n",
+    "handle_input(context, \"go to the next step\")\n",
+    "handle_input(context, \"take me back tot he fifth step\")  \n",
+    "handle_input(context, \"go back to the second step\")\n",
+    "handle_input(context, \"what is that?\")\n",
+    "handle_input(context, \"how do I do that?\")\n",
+    "handle_input(context, \"how do I deep-fry fish\")\n"
    ]
   },
   {
@@ -627,6 +833,7 @@
     "\n",
     "        context.user_prompts.append(f\"Link: {user_L}\") # store user input link\n",
     "        recipe = get_recipe_from_url(user_L)#parser to get the link content\n",
+    "        context.current_recipe = recipe\n",
     "        \n",
     "        if recipe:\n",
     "          continue\n",
@@ -647,11 +854,11 @@
     "    \n",
     "    if user_prompt == \"1\":\n",
     "      context.user_prompts.append(\"1: Walk through the steps\")\n",
-    "      display_step(recipe, context)\n",
+    "      display_step( context)\n",
     "      \n",
     "    elif user_prompt == \"2\":\n",
     "      context.user_prompts.append(\"2: Get the list of ingredients\")\n",
-    "      display_ingredients(recipe, context)\n",
+    "      display_ingredients(context)\n",
     "      \n",
     "    elif user_prompt == \"quit\":\n",
     "      context.user_prompts.append(\"quit\")\n",
@@ -660,7 +867,7 @@
     "          \n",
     "          \n",
     "    else:\n",
-    "      handle_input(recipe, context,user_prompt)\n",
+    "      handle_input(context,user_prompt)\n",
     "        \n",
     "  \n",
     "  \n",
